// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checkout checkout 1`] = `
Array [
  ".babelrc",
  ".editorconfig",
  ".flowconfig",
  ".gitignore",
  "LICENSE.md",
  "README.md",
  "package.json",
  "shrinkwrap.yaml",
  "src",
  "test",
]
`;

exports[`checkout checkout 2`] = `
Array [
  ".babelrc",
  ".editorconfig",
  ".flowconfig",
  ".gitignore",
  "LICENSE.md",
  "README.md",
  "package.json",
  "shrinkwrap.yaml",
  "src/commands/checkout.js",
  "src/commands/config.js",
  "src/commands/fetch.js",
  "src/commands/init.js",
  "src/index.js",
  "src/models/GitBlob.js",
  "src/models/GitCommit.js",
  "src/models/GitConfig.js",
  "src/models/GitTree.js",
  "src/utils/combinePayloadAndSignature.js",
  "src/utils/commitSha.js",
  "src/utils/exists.js",
  "src/utils/mkdirs.js",
  "src/utils/read.js",
  "src/utils/resolveRef.js",
  "src/utils/unwrapObject.js",
  "src/utils/wrapCommit.js",
  "src/utils/write.js",
  "test/resolveRef.js",
  "test/smoke.js",
  "test/snapshots/resolveRef.js.md",
  "test/snapshots/resolveRef.js.snap",
]
`;

exports[`checkout checkout over an existing branch 1`] = `
Array [
  "a.txt",
  "c.txt",
  "e.txt",
  "f.txt",
]
`;

exports[`checkout checkout over an existing branch 2`] = `
Array [
  "a.txt",
  "c.txt",
  "e.txt",
  "f.txt",
]
`;

exports[`checkout checkout over an existing branch 3`] = `
Array [
  "a.txt",
  "b.txt",
  "c.txt",
  "d.txt",
]
`;

exports[`checkout checkout over an existing branch 4`] = `
Array [
  "a.txt",
  "b.txt",
  "c.txt",
  "d.txt",
]
`;

exports[`checkout checkout over an existing branch 5`] = `
Array [
  "a.txt",
  "c.txt",
  "e.txt",
  "f.txt",
]
`;

exports[`checkout checkout over an existing branch 6`] = `
Array [
  "a.txt",
  "c.txt",
  "e.txt",
  "f.txt",
]
`;

exports[`checkout checkout unfetched branch 1`] = `"Failed to checkout ref 'missing-branch' because commit 033417ae18b174f078f2f44232cb7a374f4c60ce is not available locally. Do a git fetch to make the branch available locally."`;
